Renamed from "Pokémon Go" To "Pokémon GO".  Changed to the dynamic full appraisal text selection instead of the keywords selection.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-pokemongoiv - The Pokémon Go IV calculator
+pokemongoiv - The Pokémon GO IV calculator
 
   Copyright (c) 2016 imacat.
   
@@ -20,7 +20,7 @@ pokemongoiv - The Pokémon Go IV calculator
 
 DESCRIPTION
 
-    pokemongoiv is an Pokémon Go IV calculator that finds the
+    pokemongoiv is a Pokémon GO IV calculator that finds the
 individual values (IVs) of your Pokémon.  A tool bar is added to
 run the calculator.
 
