Added first uno control image.

--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -14,7 +14,7 @@
 40.DlgMain.txtPlayerLevel.HelpText=
 41.DlgMain.txtPlayerLevel.Label=\u73a9\u5bb6\u7b49\u7d1a(~L)\uff1a
 46.DlgMain.cbxIsNew.HelpText=
-47.DlgMain.cbxIsNew.Label=\u6211\u525b\u6293\u5230\u9019\u96bb\u5bf6\u53ef\u5922\uff0c\u9084\u6c92\u5f37\u5316\u904e(~N)\u3002
+47.DlgMain.cbxIsNew.Label=\u9019\u96bb\u5bf6\u53ef\u5922\u9084\u6c92\u5f37\u5316\u904e(~N)\u3002
 50.DlgMain.grpApprasals.HelpText=
 51.DlgMain.grpApprasals.Label=\u968a\u9577\u8a55\u50f9
 85.DlgMain.btnOK.HelpText=
@@ -39,3 +39,5 @@
 195.DlgMain.txtBestAfter.HelpText=
 201.DlgMain.cbxBest2.HelpText=
 203.DlgMain.cbxBest3.HelpText=
+205.DlgMain.imgTeam.HelpText=
+207.DlgMain.imgTeam.HelpText=
