Added code to display the Pokémon image when choosing the Pokémon, and the team log when choosing the team.  The Pokémon images are not fully-processed yet.

--- a/oxt/PokemonGoIV/DialogStrings_en_US.properties
+++ b/oxt/PokemonGoIV/DialogStrings_en_US.properties
@@ -1,8 +1,8 @@
 # Strings for Dialog Library PokemonGoIV
 2.DlgMain.HelpText=
-3.DlgMain.Title=Pok\u00e9mon GO IV Calculator
+3.DlgMain.Title=Pok\u00c3\u00a9mon GO IV Calculator
 22.DlgMain.txtPokemon.HelpText=
-23.DlgMain.txtPokemon.Label=~Pok\u00e9mon:
+23.DlgMain.txtPokemon.Label=~Pok\u00c3\u00a9mon:
 26.DlgMain.txtCP.HelpText=
 27.DlgMain.txtCP.Label=~CP:
 28.DlgMain.numCP.HelpText=
@@ -14,7 +14,7 @@
 40.DlgMain.txtPlayerLevel.HelpText=
 41.DlgMain.txtPlayerLevel.Label=Player ~level:
 46.DlgMain.cbxIsNew.HelpText=
-47.DlgMain.cbxIsNew.Label=This Pok\u00e9mon has not been powered-up yet.
+47.DlgMain.cbxIsNew.Label=This Pok\u00c3\u00a9mon is ~newly-caught and was not powered-up yet.
 50.DlgMain.grpApprasals.HelpText=
 51.DlgMain.grpApprasals.Label=Team Leader Apprasal
 85.DlgMain.btnOK.HelpText=
@@ -39,5 +39,3 @@
 195.DlgMain.txtBestAfter.HelpText=
 201.DlgMain.cbxBest2.HelpText=
 203.DlgMain.cbxBest3.HelpText=
-205.DlgMain.imgTeam.HelpText=
-207.DlgMain.imgTeam.HelpText=
