Added images of the team leaders, and redesigned the dialog layout.

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 PokemonGoIV TODO
 
-* Show images of teams, team leaders and Pokémons.
+* Clean-up event handlers.
+* LibreOffice compability.
 * Center the dialog.
