--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -39,3 +39,5 @@
 195.DlgMain.txtBestAfter.HelpText=
 201.DlgMain.cbxBest2.HelpText=
 203.DlgMain.cbxBest3.HelpText=
+208.DlgMain.txtLeaderAppraise.HelpText=
+210.DlgMain.imgTeamLeader.HelpText=
