--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -1,43 +1,15 @@
 # Strings for Dialog Library PokemonGoIV
-2.DlgMain.HelpText=
 3.DlgMain.Title=\u5bf6\u53ef\u5922 GO IV \u8a08\u7b97\u6a5f
-22.DlgMain.txtPokemon.HelpText=
 23.DlgMain.txtPokemon.Label=\u5bf6\u53ef\u5922(~P)\uff1a
-26.DlgMain.txtCP.HelpText=
 27.DlgMain.txtCP.Label=~CP:
-28.DlgMain.numCP.HelpText=
-29.DlgMain.txtHP.HelpText=
 30.DlgMain.txtHP.Label=~HP:
-31.DlgMain.numHP.HelpText=
-32.DlgMain.txtStarDust.HelpText=
 33.DlgMain.txtStarDust.Label=S~tar dust:
-40.DlgMain.txtPlayerLevel.HelpText=
 41.DlgMain.txtPlayerLevel.Label=\u73a9\u5bb6\u7b49\u7d1a(~L)\uff1a
-46.DlgMain.cbxIsNew.HelpText=
 47.DlgMain.cbxIsNew.Label=\u6211\u525b\u6293\u5230\u9019\u96bb\u5bf6\u53ef\u5922\uff0c\u9084\u6c92\u5f37\u5316\u904e(~N)\u3002
-50.DlgMain.grpApprasals.HelpText=
-51.DlgMain.grpApprasals.Label=\u968a\u9577\u8a55\u50f9
-85.DlgMain.btnOK.HelpText=
+51.DlgMain.grpAppraisals.Label=\u968a\u9577\u8a55\u50f9
 86.DlgMain.btnOK.Label=\u78ba\u5b9a
-87.DlgMain.btnCancel.HelpText=
 88.DlgMain.btnCancel.Label=\u53d6\u6d88
-162.DlgMain.lstStarDust.HelpText=
-163.DlgMain.lstPlayerLevel.HelpText=
-164.DlgMain.lstApprasal1.HelpText=
-165.DlgMain.lstApprasal2.HelpText=
-171.DlgMain.lstPokemon.HelpText=
-180.DlgMain.txtTeam.HelpText=
 181.DlgMain.txtTeam.Label=\u968a\u4f0d\uff1a
-182.DlgMain.rdoTeamRed.HelpText=
 183.DlgMain.rdoTeamRed.Label=~Valor
-184.DlgMain.rdoTeamBlue.HelpText=
 185.DlgMain.rdoTeamBlue.Label=~Mystic
-186.DlgMain.rdoTeamYellow.HelpText=
 187.DlgMain.rdoTeamYellow.Label=~Instinct
-193.DlgMain.lstBest.HelpText=
-194.DlgMain.txtBestBefore.HelpText=
-195.DlgMain.txtBestAfter.HelpText=
-201.DlgMain.cbxBest2.HelpText=
-203.DlgMain.cbxBest3.HelpText=
-208.DlgMain.txtLeaderAppraise.HelpText=
-210.DlgMain.imgTeamLeader.HelpText=
