--- a/TODO
+++ b/TODO
@@ -1,6 +1,6 @@
 PokemonGoIV TODO
 
-* Added the lower limit (10) of CP.
+* Screen capture.
 * Fix layout on MacOSX and MS-Windows.
 * LibreOffice compability.
 * Center the dialog.
