Fixed a regression message error.  Advanced to version 0.2.4.

--- a/oxt/PokemonGoIV/DialogStrings_en_US.properties
+++ b/oxt/PokemonGoIV/DialogStrings_en_US.properties
@@ -5,7 +5,7 @@
 30.DlgMain.txtHP.Label=~HP:
 33.DlgMain.txtStarDust.Label=S~tar dust:
 41.DlgMain.txtPlayerLevel.Label=Player ~level:
-47.DlgMain.cbxIsNew.Label=This Pok\u00e9mon is ~newly-caught and was not powered-up yet.
+47.DlgMain.cbxIsNew.Label=This Pok\u00e9mon has ~not been powered-up yet.
 51.DlgMain.grpAppraisals.Label=Team Leader Appraisal
 86.DlgMain.btnOK.Label=OK
 88.DlgMain.btnCancel.Label=Cancel
