--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -5,7 +5,7 @@
 30.DlgMain.txtHP.Label=~HP:
 33.DlgMain.txtStarDust.Label=S~tar dust:
 41.DlgMain.txtPlayerLevel.Label=\u73a9\u5bb6\u7b49\u7d1a(~L)\uff1a
-47.DlgMain.cbxIsNew.Label=\u6211\u525b\u6293\u5230\u9019\u96bb\u5bf6\u53ef\u5922\uff0c\u9084\u6c92\u5f37\u5316\u904e(~N)\u3002
+47.DlgMain.cbxIsNew.Label=\u9019\u96bb\u5bf6\u53ef\u5922\u9084\u6c92\u5f37\u5316\u904e(~N)\u3002
 51.DlgMain.grpAppraisals.Label=\u968a\u9577\u8a55\u50f9
 86.DlgMain.btnOK.Label=\u78ba\u5b9a
 88.DlgMain.btnCancel.Label=\u53d6\u6d88
