Renamed Team Red, Team Blue and Team Yeallow to Team Valor, Team Mystic and Team Instinct in the keywords of the source code.

--- a/oxt/PokemonGoIV/DialogStrings_en_US.properties
+++ b/oxt/PokemonGoIV/DialogStrings_en_US.properties
@@ -10,6 +10,6 @@
 86.DlgMain.btnOK.Label=OK
 88.DlgMain.btnCancel.Label=Cancel
 181.DlgMain.txtTeam.Label=Team:
-183.DlgMain.rdoTeamRed.Label=~Valor
-185.DlgMain.rdoTeamBlue.Label=~Mystic
-187.DlgMain.rdoTeamYellow.Label=~Instinct
+183.DlgMain.rdoTeamValor.Label=~Valor
+185.DlgMain.rdoTeamMystic.Label=~Mystic
+187.DlgMain.rdoTeamInstinct.Label=~Instinct
