Added team name to the localization list.

--- a/oxt/PokemonGoIV/DialogStrings_en_US.properties
+++ b/oxt/PokemonGoIV/DialogStrings_en_US.properties
@@ -9,7 +9,6 @@
 51.DlgMain.grpAppraisals.Label=Team Leader Appraisal
 86.DlgMain.btnOK.Label=OK
 88.DlgMain.btnCancel.Label=Cancel
-181.DlgMain.txtTeam.Label=Team:
-183.DlgMain.rdoTeamValor.Label=~Valor
-185.DlgMain.rdoTeamMystic.Label=~Mystic
-187.DlgMain.rdoTeamInstinct.Label=~Instinct
+183.DlgMain.rdoTeamValor.Label=Team ~Valor
+185.DlgMain.rdoTeamMystic.Label=Team ~Mystic
+187.DlgMain.rdoTeamInstinct.Label=Team ~Instinct
