--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -9,7 +9,6 @@
 51.DlgMain.grpAppraisals.Label=\u968a\u9577\u8a55\u50f9
 86.DlgMain.btnOK.Label=\u78ba\u5b9a
 88.DlgMain.btnCancel.Label=\u53d6\u6d88
-181.DlgMain.txtTeam.Label=\u968a\u4f0d\uff1a
-183.DlgMain.rdoTeamValor.Label=~Valor
-185.DlgMain.rdoTeamMystic.Label=~Mystic
-187.DlgMain.rdoTeamInstinct.Label=~Instinct
+183.DlgMain.rdoTeamValor.Label=~Valor \u968a
+185.DlgMain.rdoTeamMystic.Label=~Mystic \u968a
+187.DlgMain.rdoTeamInstinct.Label=~Instinct \u968a
