Moved Pokémon names list to properties.  Localized the total, the max and the "best, too" appraisals.

--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -1,14 +1,170 @@
 # Strings for Dialog Library PokemonGoIV
-3.DlgMain.Title=\u5bf6\u53ef\u5922 GO IV \u8a08\u7b97\u6a5f
-23.DlgMain.txtPokemon.Label=\u5bf6\u53ef\u5922(~P)\uff1a
-27.DlgMain.txtCP.Label=~CP:
-30.DlgMain.txtHP.Label=~HP:
-33.DlgMain.txtStarDust.Label=S~tar dust:
-41.DlgMain.txtPlayerLevel.Label=\u73a9\u5bb6\u7b49\u7d1a(~L)\uff1a
-47.DlgMain.cbxIsNew.Label=\u9019\u96bb\u5bf6\u53ef\u5922\u9084\u6c92\u5f37\u5316\u904e(~N)\u3002
-51.DlgMain.grpAppraisals.Label=\u968a\u9577\u8a55\u50f9
-86.DlgMain.btnOK.Label=\u78ba\u5b9a
-88.DlgMain.btnCancel.Label=\u53d6\u6d88
-183.DlgMain.rdoTeamValor.Label=~Valor \u968a
-185.DlgMain.rdoTeamMystic.Label=~Mystic \u968a
-187.DlgMain.rdoTeamInstinct.Label=~Instinct \u968a
+1.DlgMain.Title=\u5bf6\u53ef\u5922 GO IV \u8a08\u7b97\u6a5f
+2.DlgMain.txtPokemon.Label=\u5bf6\u53ef\u5922(~P)\uff1a
+3.DlgMain.txtCP.Label=~CP:
+4.DlgMain.txtHP.Label=~HP:
+5.DlgMain.txtStarDust.Label=S~tar dust:
+6.DlgMain.txtPlayerLevel.Label=\u73a9\u5bb6\u7b49\u7d1a(~L)\uff1a
+7.DlgMain.cbxIsNew.Label=\u9019\u96bb\u5bf6\u53ef\u5922\u9084\u6c92\u5f37\u5316\u904e(~N)\u3002
+8.DlgMain.grpAppraisals.Label=\u968a\u9577\u8a55\u50f9
+9.DlgMain.rdoTeamValor.Label=~Valor \u968a
+10.DlgMain.rdoTeamMystic.Label=~Mystic \u968a
+11.DlgMain.rdoTeamInstinct.Label=~Instinct \u968a
+1001.lstPokemon.StringItemList=Bulbasaur
+1002.lstPokemon.StringItemList=Ivysaur
+1003.lstPokemon.StringItemList=Venusaur
+1004.lstPokemon.StringItemList=Charmander
+1005.lstPokemon.StringItemList=Charmeleon
+1006.lstPokemon.StringItemList=Charizard
+1007.lstPokemon.StringItemList=Squirtle
+1008.lstPokemon.StringItemList=Wartortle
+1009.lstPokemon.StringItemList=Blastoise
+1010.lstPokemon.StringItemList=Caterpie
+1011.lstPokemon.StringItemList=Metapod
+1012.lstPokemon.StringItemList=Butterfree
+1013.lstPokemon.StringItemList=Weedle
+1014.lstPokemon.StringItemList=Kakuna
+1015.lstPokemon.StringItemList=Beedrill
+1016.lstPokemon.StringItemList=Pidgey
+1017.lstPokemon.StringItemList=Pidgeotto
+1018.lstPokemon.StringItemList=Pidgeot
+1019.lstPokemon.StringItemList=Rattata
+1020.lstPokemon.StringItemList=Raticate
+1021.lstPokemon.StringItemList=Spearow
+1022.lstPokemon.StringItemList=Fearow
+1023.lstPokemon.StringItemList=Ekans
+1024.lstPokemon.StringItemList=Arbok
+1025.lstPokemon.StringItemList=Pikachu
+1026.lstPokemon.StringItemList=Raichu
+1027.lstPokemon.StringItemList=Sandshrew
+1028.lstPokemon.StringItemList=Sandslash
+1029.lstPokemon.StringItemList=Nidoran\u2640
+1030.lstPokemon.StringItemList=Nidorina
+1031.lstPokemon.StringItemList=Nidoqueen
+1032.lstPokemon.StringItemList=Nidoran\u2642
+1033.lstPokemon.StringItemList=Nidorino
+1034.lstPokemon.StringItemList=Nidoking
+1035.lstPokemon.StringItemList=Clefairy
+1036.lstPokemon.StringItemList=Clefable
+1037.lstPokemon.StringItemList=Vulpix
+1038.lstPokemon.StringItemList=Ninetales
+1039.lstPokemon.StringItemList=Jigglypuff
+1040.lstPokemon.StringItemList=Wigglytuff
+1041.lstPokemon.StringItemList=Zubat
+1042.lstPokemon.StringItemList=Golbat
+1043.lstPokemon.StringItemList=Oddish
+1044.lstPokemon.StringItemList=Gloom
+1045.lstPokemon.StringItemList=Vileplume
+1046.lstPokemon.StringItemList=Paras
+1047.lstPokemon.StringItemList=Parasect
+1048.lstPokemon.StringItemList=Venonat
+1049.lstPokemon.StringItemList=Venomoth
+1050.lstPokemon.StringItemList=Diglett
+1051.lstPokemon.StringItemList=Dugtrio
+1052.lstPokemon.StringItemList=Meowth
+1053.lstPokemon.StringItemList=Persian
+1054.lstPokemon.StringItemList=Psyduck
+1055.lstPokemon.StringItemList=Golduck
+1056.lstPokemon.StringItemList=Mankey
+1057.lstPokemon.StringItemList=Primeape
+1058.lstPokemon.StringItemList=Growlithe
+1059.lstPokemon.StringItemList=Arcanine
+1060.lstPokemon.StringItemList=Poliwag
+1061.lstPokemon.StringItemList=Poliwhirl
+1062.lstPokemon.StringItemList=Poliwrath
+1063.lstPokemon.StringItemList=Abra
+1064.lstPokemon.StringItemList=Kadabra
+1065.lstPokemon.StringItemList=Alakazam
+1066.lstPokemon.StringItemList=Machop
+1067.lstPokemon.StringItemList=Machoke
+1068.lstPokemon.StringItemList=Machamp
+1069.lstPokemon.StringItemList=Bellsprout
+1070.lstPokemon.StringItemList=Weepinbell
+1071.lstPokemon.StringItemList=Victreebel
+1072.lstPokemon.StringItemList=Tentacool
+1073.lstPokemon.StringItemList=Tentacruel
+1074.lstPokemon.StringItemList=Geodude
+1075.lstPokemon.StringItemList=Graveler
+1076.lstPokemon.StringItemList=Golem
+1077.lstPokemon.StringItemList=Ponyta
+1078.lstPokemon.StringItemList=Rapidash
+1079.lstPokemon.StringItemList=Slowpoke
+1080.lstPokemon.StringItemList=Slowbro
+1081.lstPokemon.StringItemList=Magnemite
+1082.lstPokemon.StringItemList=Magneton
+1083.lstPokemon.StringItemList=Farfetch'd
+1084.lstPokemon.StringItemList=Doduo
+1085.lstPokemon.StringItemList=Dodrio
+1086.lstPokemon.StringItemList=Seel
+1087.lstPokemon.StringItemList=Dewgong
+1088.lstPokemon.StringItemList=Grimer
+1089.lstPokemon.StringItemList=Muk
+1090.lstPokemon.StringItemList=Shellder
+1091.lstPokemon.StringItemList=Cloyster
+1092.lstPokemon.StringItemList=Gastly
+1093.lstPokemon.StringItemList=Haunter
+1094.lstPokemon.StringItemList=Gengar
+1095.lstPokemon.StringItemList=Onix
+1096.lstPokemon.StringItemList=Drowzee
+1097.lstPokemon.StringItemList=Hypno
+1098.lstPokemon.StringItemList=Krabby
+1099.lstPokemon.StringItemList=Kingler
+1100.lstPokemon.StringItemList=Voltorb
+1101.lstPokemon.StringItemList=Electrode
+1102.lstPokemon.StringItemList=Exeggcute
+1103.lstPokemon.StringItemList=Exeggutor
+1104.lstPokemon.StringItemList=Cubone
+1105.lstPokemon.StringItemList=Marowak
+1106.lstPokemon.StringItemList=Hitmonlee
+1107.lstPokemon.StringItemList=Hitmonchan
+1108.lstPokemon.StringItemList=Lickitung
+1109.lstPokemon.StringItemList=Koffing
+1110.lstPokemon.StringItemList=Weezing
+1111.lstPokemon.StringItemList=Rhyhorn
+1112.lstPokemon.StringItemList=Rhydon
+1113.lstPokemon.StringItemList=Chansey
+1114.lstPokemon.StringItemList=Tangela
+1115.lstPokemon.StringItemList=Kangaskhan
+1116.lstPokemon.StringItemList=Horsea
+1117.lstPokemon.StringItemList=Seadra
+1118.lstPokemon.StringItemList=Goldeen
+1119.lstPokemon.StringItemList=Seaking
+1120.lstPokemon.StringItemList=Staryu
+1121.lstPokemon.StringItemList=Starmie
+1122.lstPokemon.StringItemList=Mr. Mime
+1123.lstPokemon.StringItemList=Scyther
+1124.lstPokemon.StringItemList=Jynx
+1125.lstPokemon.StringItemList=Electabuzz
+1126.lstPokemon.StringItemList=Magmar
+1127.lstPokemon.StringItemList=Pinsir
+1128.lstPokemon.StringItemList=Tauros
+1129.lstPokemon.StringItemList=Magikarp
+1130.lstPokemon.StringItemList=Gyarados
+1131.lstPokemon.StringItemList=Lapras
+1132.lstPokemon.StringItemList=Ditto
+1133.lstPokemon.StringItemList=Eevee
+1134.lstPokemon.StringItemList=Vaporeon
+1135.lstPokemon.StringItemList=Jolteon
+1136.lstPokemon.StringItemList=Flareon
+1137.lstPokemon.StringItemList=Porygon
+1138.lstPokemon.StringItemList=Omanyte
+1139.lstPokemon.StringItemList=Omastar
+1140.lstPokemon.StringItemList=Kabuto
+1141.lstPokemon.StringItemList=Kabutops
+1142.lstPokemon.StringItemList=Aerodactyl
+1143.lstPokemon.StringItemList=Snorlax
+1144.lstPokemon.StringItemList=Articuno
+1145.lstPokemon.StringItemList=Zapdos
+1146.lstPokemon.StringItemList=Moltres
+1147.lstPokemon.StringItemList=Dratini
+1148.lstPokemon.StringItemList=Dragonair
+1149.lstPokemon.StringItemList=Dragonite
+1150.lstPokemon.StringItemList=Mewtwo
+1151.lstPokemon.StringItemList=Mew
+1172.lstPokemon.StringItemList=Pichu
+1173.lstPokemon.StringItemList=Cleffa
+1174.lstPokemon.StringItemList=Igglybuff
+1175.lstPokemon.StringItemList=Togepi
+1176.lstPokemon.StringItemList=Togetic
+1238.lstPokemon.StringItemList=Smoochum
+1239.lstPokemon.StringItemList=Elekid
