--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -168,3 +168,4 @@
 1176.lstPokemon.StringItemList=Togetic
 1238.lstPokemon.StringItemList=Smoochum
 1239.lstPokemon.StringItemList=Elekid
+1240.lstPokemon.StringItemList=Magby
