add Deutsch (German) translation

--- a/oxt/PokemonGoIV/DialogStrings_de_DE.properties
+++ b/oxt/PokemonGoIV/DialogStrings_de_DE.properties
@@ -1,170 +1,252 @@
 # Strings for Dialog Library PokemonGoIV
-1.DlgMain.Title=Pok\u00e9mon GO IV Calculator
+1.DlgMain.Title=Pok\u00e9mon GO IV Rechner
 2.DlgMain.txtPokemon.Label=~Pok\u00e9mon:
-3.DlgMain.txtCP.Label=~CP:
-4.DlgMain.txtHP.Label=~HP:
-5.DlgMain.txtStarDust.Label=S~tar dust:
-6.DlgMain.txtPlayerLevel.Label=Player ~level:
-7.DlgMain.cbxIsNew.Label=This Pok\u00e9mon has ~not been powered-up yet.
-8.DlgMain.grpAppraisals.Label=Team Leader Appraisal
-9.DlgMain.rdoTeamValor.Label=Team ~Valor
-10.DlgMain.rdoTeamMystic.Label=Team ~Mystic
-11.DlgMain.rdoTeamInstinct.Label=Team ~Instinct
-1001.lstPokemon.StringItemList=Bulbasaur
-1002.lstPokemon.StringItemList=Ivysaur
-1003.lstPokemon.StringItemList=Venusaur
-1004.lstPokemon.StringItemList=Charmander
-1005.lstPokemon.StringItemList=Charmeleon
-1006.lstPokemon.StringItemList=Charizard
-1007.lstPokemon.StringItemList=Squirtle
-1008.lstPokemon.StringItemList=Wartortle
-1009.lstPokemon.StringItemList=Blastoise
-1010.lstPokemon.StringItemList=Caterpie
-1011.lstPokemon.StringItemList=Metapod
-1012.lstPokemon.StringItemList=Butterfree
-1013.lstPokemon.StringItemList=Weedle
-1014.lstPokemon.StringItemList=Kakuna
-1015.lstPokemon.StringItemList=Beedrill
-1016.lstPokemon.StringItemList=Pidgey
-1017.lstPokemon.StringItemList=Pidgeotto
-1018.lstPokemon.StringItemList=Pidgeot
-1019.lstPokemon.StringItemList=Rattata
-1020.lstPokemon.StringItemList=Raticate
-1021.lstPokemon.StringItemList=Spearow
-1022.lstPokemon.StringItemList=Fearow
-1023.lstPokemon.StringItemList=Ekans
+3.DlgMain.txtCP.Label=~WP:
+4.DlgMain.txtHP.Label=~KP:
+5.DlgMain.txtStarDust.Label=~Sternenstaub:
+6.DlgMain.txtPlayerLevel.Label=Spieler ~Level:
+7.DlgMain.cbxIsNew.Label=Dieses Pok\u00e9mon hat noch ~kein Power-Up bekommen.
+8.DlgMain.grpAppraisals.Label=Bewertung des Teamleiters
+9.DlgMain.rdoTeamValor.Label=Team W~agemut
+10.DlgMain.rdoTeamMystic.Label=Team W~eisheit
+11.DlgMain.rdoTeamInstinct.Label=Team ~Intuition
+1001.lstPokemon.StringItemList=Bisasam
+1002.lstPokemon.StringItemList=Bisaknosp
+1003.lstPokemon.StringItemList=Bisaflor
+1004.lstPokemon.StringItemList=Glumanda
+1005.lstPokemon.StringItemList=Glutexo
+1006.lstPokemon.StringItemList=Glurak
+1007.lstPokemon.StringItemList=Schiggy
+1008.lstPokemon.StringItemList=Schillok
+1009.lstPokemon.StringItemList=Turtok
+1010.lstPokemon.StringItemList=Raupy
+1011.lstPokemon.StringItemList=Safcon
+1012.lstPokemon.StringItemList=Smettbo
+1013.lstPokemon.StringItemList=Hornliu
+1014.lstPokemon.StringItemList=Kokuna
+1015.lstPokemon.StringItemList=Bibor
+1016.lstPokemon.StringItemList=Taubsi
+1017.lstPokemon.StringItemList=Tauboga
+1018.lstPokemon.StringItemList=Tauboss
+1019.lstPokemon.StringItemList=Rattfratz
+1020.lstPokemon.StringItemList=Rattikarl
+1021.lstPokemon.StringItemList=Habitak
+1022.lstPokemon.StringItemList=Ibitak
+1023.lstPokemon.StringItemList=Rettan
 1024.lstPokemon.StringItemList=Arbok
 1025.lstPokemon.StringItemList=Pikachu
 1026.lstPokemon.StringItemList=Raichu
-1027.lstPokemon.StringItemList=Sandshrew
-1028.lstPokemon.StringItemList=Sandslash
+1027.lstPokemon.StringItemList=Sandan
+1028.lstPokemon.StringItemList=Sandamer
 1029.lstPokemon.StringItemList=Nidoran\u2640
 1030.lstPokemon.StringItemList=Nidorina
 1031.lstPokemon.StringItemList=Nidoqueen
 1032.lstPokemon.StringItemList=Nidoran\u2642
 1033.lstPokemon.StringItemList=Nidorino
 1034.lstPokemon.StringItemList=Nidoking
-1035.lstPokemon.StringItemList=Clefairy
-1036.lstPokemon.StringItemList=Clefable
+1035.lstPokemon.StringItemList=Piepi
+1036.lstPokemon.StringItemList=Pixi
 1037.lstPokemon.StringItemList=Vulpix
-1038.lstPokemon.StringItemList=Ninetales
-1039.lstPokemon.StringItemList=Jigglypuff
-1040.lstPokemon.StringItemList=Wigglytuff
+1038.lstPokemon.StringItemList=Vulnona
+1039.lstPokemon.StringItemList=Pummeluff
+1040.lstPokemon.StringItemList=Knuddeluff
 1041.lstPokemon.StringItemList=Zubat
 1042.lstPokemon.StringItemList=Golbat
-1043.lstPokemon.StringItemList=Oddish
-1044.lstPokemon.StringItemList=Gloom
-1045.lstPokemon.StringItemList=Vileplume
+1043.lstPokemon.StringItemList=Myrapla
+1044.lstPokemon.StringItemList=Duflor
+1045.lstPokemon.StringItemList=Giflor
 1046.lstPokemon.StringItemList=Paras
-1047.lstPokemon.StringItemList=Parasect
-1048.lstPokemon.StringItemList=Venonat
-1049.lstPokemon.StringItemList=Venomoth
-1050.lstPokemon.StringItemList=Diglett
-1051.lstPokemon.StringItemList=Dugtrio
-1052.lstPokemon.StringItemList=Meowth
-1053.lstPokemon.StringItemList=Persian
-1054.lstPokemon.StringItemList=Psyduck
-1055.lstPokemon.StringItemList=Golduck
-1056.lstPokemon.StringItemList=Mankey
-1057.lstPokemon.StringItemList=Primeape
-1058.lstPokemon.StringItemList=Growlithe
-1059.lstPokemon.StringItemList=Arcanine
-1060.lstPokemon.StringItemList=Poliwag
-1061.lstPokemon.StringItemList=Poliwhirl
-1062.lstPokemon.StringItemList=Poliwrath
+1047.lstPokemon.StringItemList=Parasek
+1048.lstPokemon.StringItemList=Bluzuk
+1049.lstPokemon.StringItemList=Omot
+1050.lstPokemon.StringItemList=Digda
+1051.lstPokemon.StringItemList=Digdri
+1052.lstPokemon.StringItemList=Mauzi
+1053.lstPokemon.StringItemList=Snobilikat
+1054.lstPokemon.StringItemList=Enton
+1055.lstPokemon.StringItemList=Entoron
+1056.lstPokemon.StringItemList=Menki
+1057.lstPokemon.StringItemList=Rasaff
+1058.lstPokemon.StringItemList=Fukano
+1059.lstPokemon.StringItemList=Arkani
+1060.lstPokemon.StringItemList=Quapsel
+1061.lstPokemon.StringItemList=Quaputzi
+1062.lstPokemon.StringItemList=Quappo
 1063.lstPokemon.StringItemList=Abra
 1064.lstPokemon.StringItemList=Kadabra
-1065.lstPokemon.StringItemList=Alakazam
-1066.lstPokemon.StringItemList=Machop
-1067.lstPokemon.StringItemList=Machoke
-1068.lstPokemon.StringItemList=Machamp
-1069.lstPokemon.StringItemList=Bellsprout
-1070.lstPokemon.StringItemList=Weepinbell
-1071.lstPokemon.StringItemList=Victreebel
-1072.lstPokemon.StringItemList=Tentacool
-1073.lstPokemon.StringItemList=Tentacruel
-1074.lstPokemon.StringItemList=Geodude
-1075.lstPokemon.StringItemList=Graveler
-1076.lstPokemon.StringItemList=Golem
-1077.lstPokemon.StringItemList=Ponyta
-1078.lstPokemon.StringItemList=Rapidash
-1079.lstPokemon.StringItemList=Slowpoke
-1080.lstPokemon.StringItemList=Slowbro
-1081.lstPokemon.StringItemList=Magnemite
+1065.lstPokemon.StringItemList=Simsala
+1066.lstPokemon.StringItemList=Machollo
+1067.lstPokemon.StringItemList=Maschock
+1068.lstPokemon.StringItemList=Machomei
+1069.lstPokemon.StringItemList=Knofensa
+1070.lstPokemon.StringItemList=Ultrigaria
+1071.lstPokemon.StringItemList=Sarzenia
+1072.lstPokemon.StringItemList=Tentacha
+1073.lstPokemon.StringItemList=Tentoxa
+1074.lstPokemon.StringItemList=Kleinstein
+1075.lstPokemon.StringItemList=Georok
+1076.lstPokemon.StringItemList=Geowaz
+1077.lstPokemon.StringItemList=Ponita
+1078.lstPokemon.StringItemList=Gallopa
+1079.lstPokemon.StringItemList=Flegmon
+1080.lstPokemon.StringItemList=Lahmus
+1081.lstPokemon.StringItemList=Magnetilo
 1082.lstPokemon.StringItemList=Magneton
-1083.lstPokemon.StringItemList=Farfetch'd
-1084.lstPokemon.StringItemList=Doduo
-1085.lstPokemon.StringItemList=Dodrio
-1086.lstPokemon.StringItemList=Seel
-1087.lstPokemon.StringItemList=Dewgong
-1088.lstPokemon.StringItemList=Grimer
-1089.lstPokemon.StringItemList=Muk
-1090.lstPokemon.StringItemList=Shellder
-1091.lstPokemon.StringItemList=Cloyster
-1092.lstPokemon.StringItemList=Gastly
-1093.lstPokemon.StringItemList=Haunter
+1083.lstPokemon.StringItemList=Porenta
+1084.lstPokemon.StringItemList=Dodu
+1085.lstPokemon.StringItemList=Dodri
+1086.lstPokemon.StringItemList=Jurob
+1087.lstPokemon.StringItemList=Jugong
+1088.lstPokemon.StringItemList=Sleima
+1089.lstPokemon.StringItemList=Sleimok
+1090.lstPokemon.StringItemList=Muschas
+1091.lstPokemon.StringItemList=Austos
+1092.lstPokemon.StringItemList=Nebulak
+1093.lstPokemon.StringItemList=Alpollo
 1094.lstPokemon.StringItemList=Gengar
 1095.lstPokemon.StringItemList=Onix
-1096.lstPokemon.StringItemList=Drowzee
+1096.lstPokemon.StringItemList=Traumato
 1097.lstPokemon.StringItemList=Hypno
 1098.lstPokemon.StringItemList=Krabby
 1099.lstPokemon.StringItemList=Kingler
-1100.lstPokemon.StringItemList=Voltorb
-1101.lstPokemon.StringItemList=Electrode
-1102.lstPokemon.StringItemList=Exeggcute
-1103.lstPokemon.StringItemList=Exeggutor
-1104.lstPokemon.StringItemList=Cubone
-1105.lstPokemon.StringItemList=Marowak
-1106.lstPokemon.StringItemList=Hitmonlee
-1107.lstPokemon.StringItemList=Hitmonchan
-1108.lstPokemon.StringItemList=Lickitung
-1109.lstPokemon.StringItemList=Koffing
-1110.lstPokemon.StringItemList=Weezing
-1111.lstPokemon.StringItemList=Rhyhorn
-1112.lstPokemon.StringItemList=Rhydon
-1113.lstPokemon.StringItemList=Chansey
+1100.lstPokemon.StringItemList=Voltobal
+1101.lstPokemon.StringItemList=Lektrobal
+1102.lstPokemon.StringItemList=Owei
+1103.lstPokemon.StringItemList=Kokowei
+1104.lstPokemon.StringItemList=Tragosso
+1105.lstPokemon.StringItemList=Knogga
+1106.lstPokemon.StringItemList=Kicklee
+1107.lstPokemon.StringItemList=Nockchan
+1108.lstPokemon.StringItemList=Schlurp
+1109.lstPokemon.StringItemList=Smogon
+1110.lstPokemon.StringItemList=Smogmog
+1111.lstPokemon.StringItemList=Rihorn
+1112.lstPokemon.StringItemList=Rizeros
+1113.lstPokemon.StringItemList=Chaneira
 1114.lstPokemon.StringItemList=Tangela
-1115.lstPokemon.StringItemList=Kangaskhan
-1116.lstPokemon.StringItemList=Horsea
-1117.lstPokemon.StringItemList=Seadra
-1118.lstPokemon.StringItemList=Goldeen
-1119.lstPokemon.StringItemList=Seaking
-1120.lstPokemon.StringItemList=Staryu
+1115.lstPokemon.StringItemList=Kangama
+1116.lstPokemon.StringItemList=Seeper
+1117.lstPokemon.StringItemList=Seemon
+1118.lstPokemon.StringItemList=Goldini
+1119.lstPokemon.StringItemList=Golking
+1120.lstPokemon.StringItemList=Sterndu
 1121.lstPokemon.StringItemList=Starmie
-1122.lstPokemon.StringItemList=Mr. Mime
-1123.lstPokemon.StringItemList=Scyther
-1124.lstPokemon.StringItemList=Jynx
-1125.lstPokemon.StringItemList=Electabuzz
+1122.lstPokemon.StringItemList=Pantimos
+1123.lstPokemon.StringItemList=Sichlor
+1124.lstPokemon.StringItemList=Rossana
+1125.lstPokemon.StringItemList=Elektek
 1126.lstPokemon.StringItemList=Magmar
 1127.lstPokemon.StringItemList=Pinsir
 1128.lstPokemon.StringItemList=Tauros
-1129.lstPokemon.StringItemList=Magikarp
-1130.lstPokemon.StringItemList=Gyarados
+1129.lstPokemon.StringItemList=Karpador
+1130.lstPokemon.StringItemList=Garados
 1131.lstPokemon.StringItemList=Lapras
 1132.lstPokemon.StringItemList=Ditto
-1133.lstPokemon.StringItemList=Eevee
-1134.lstPokemon.StringItemList=Vaporeon
-1135.lstPokemon.StringItemList=Jolteon
-1136.lstPokemon.StringItemList=Flareon
+1133.lstPokemon.StringItemList=Evoli
+1134.lstPokemon.StringItemList=Aquana
+1135.lstPokemon.StringItemList=Blitza
+1136.lstPokemon.StringItemList=Flamara
 1137.lstPokemon.StringItemList=Porygon
-1138.lstPokemon.StringItemList=Omanyte
-1139.lstPokemon.StringItemList=Omastar
+1138.lstPokemon.StringItemList=Amonitas
+1139.lstPokemon.StringItemList=Amoroso
 1140.lstPokemon.StringItemList=Kabuto
 1141.lstPokemon.StringItemList=Kabutops
 1142.lstPokemon.StringItemList=Aerodactyl
-1143.lstPokemon.StringItemList=Snorlax
-1144.lstPokemon.StringItemList=Articuno
+1143.lstPokemon.StringItemList=Relaxo
+1144.lstPokemon.StringItemList=Arktos
 1145.lstPokemon.StringItemList=Zapdos
-1146.lstPokemon.StringItemList=Moltres
+1146.lstPokemon.StringItemList=Lavados
 1147.lstPokemon.StringItemList=Dratini
-1148.lstPokemon.StringItemList=Dragonair
-1149.lstPokemon.StringItemList=Dragonite
-1150.lstPokemon.StringItemList=Mewtwo
+1148.lstPokemon.StringItemList=Dragonir
+1149.lstPokemon.StringItemList=Dragoran
+1150.lstPokemon.StringItemList=Mewtu
 1151.lstPokemon.StringItemList=Mew
+1152.lstPokemon.StringItemList=Endivie
+1153.lstPokemon.StringItemList=Lorblatt
+1154.lstPokemon.StringItemList=Meganie
+1155.lstPokemon.StringItemList=Feurigel
+1156.lstPokemon.StringItemList=Igelavar
+1157.lstPokemon.StringItemList=Tornupto
+1158.lstPokemon.StringItemList=Karnimani
+1159.lstPokemon.StringItemList=Tyracroc
+1160.lstPokemon.StringItemList=Impergator
+1161.lstPokemon.StringItemList=Wiesor
+1162.lstPokemon.StringItemList=Wiesenior
+1163.lstPokemon.StringItemList=Hoothoot
+1164.lstPokemon.StringItemList=Noctuh
+1165.lstPokemon.StringItemList=Ledyba
+1166.lstPokemon.StringItemList=Ledian
+1167.lstPokemon.StringItemList=Webarak
+1168.lstPokemon.StringItemList=Ariados
+1169.lstPokemon.StringItemList=Iksbat
+1170.lstPokemon.StringItemList=Lampi
+1171.lstPokemon.StringItemList=Lanturn
 1172.lstPokemon.StringItemList=Pichu
-1173.lstPokemon.StringItemList=Cleffa
-1174.lstPokemon.StringItemList=Igglybuff
+1173.lstPokemon.StringItemList=Pii
+1174.lstPokemon.StringItemList=Fluffeluff
 1175.lstPokemon.StringItemList=Togepi
 1176.lstPokemon.StringItemList=Togetic
-1238.lstPokemon.StringItemList=Smoochum
+1177.lstPokemon.StringItemList=Natu
+1178.lstPokemon.StringItemList=Xatu
+1179.lstPokemon.StringItemList=Voltilamm
+1180.lstPokemon.StringItemList=Waaty
+1181.lstPokemon.StringItemList=Ampharos
+1182.lstPokemon.StringItemList=Blubella
+1183.lstPokemon.StringItemList=Marill
+1184.lstPokemon.StringItemList=Azumarill
+1185.lstPokemon.StringItemList=Mogelbaum
+1186.lstPokemon.StringItemList=Quaxo
+1187.lstPokemon.StringItemList=Hoppspross
+1188.lstPokemon.StringItemList=Hubelupf
+1189.lstPokemon.StringItemList=Papungha
+1190.lstPokemon.StringItemList=Griffel
+1191.lstPokemon.StringItemList=Sonnkern
+1192.lstPokemon.StringItemList=Sonnflora
+1193.lstPokemon.StringItemList=Yanma
+1194.lstPokemon.StringItemList=Felino
+1195.lstPokemon.StringItemList=Morlord
+1196.lstPokemon.StringItemList=Psiana
+1197.lstPokemon.StringItemList=Nachtara
+1198.lstPokemon.StringItemList=Kramurx
+1199.lstPokemon.StringItemList=Laschoking
+1200.lstPokemon.StringItemList=Traunfugil
+1201.lstPokemon.StringItemList=Icognito
+1202.lstPokemon.StringItemList=Woingenau
+1203.lstPokemon.StringItemList=Girafarig
+1204.lstPokemon.StringItemList=Tannza
+1205.lstPokemon.StringItemList=Forstellka
+1206.lstPokemon.StringItemList=Dummisel
+1207.lstPokemon.StringItemList=Skorgla
+1208.lstPokemon.StringItemList=Stahlos
+1209.lstPokemon.StringItemList=Snubbull
+1210.lstPokemon.StringItemList=Granbull
+1211.lstPokemon.StringItemList=Baldorfish
+1212.lstPokemon.StringItemList=Scherox
+1213.lstPokemon.StringItemList=Pottrott
+1214.lstPokemon.StringItemList=Skaraborn
+1215.lstPokemon.StringItemList=Sniebel
+1216.lstPokemon.StringItemList=Teddiursa
+1217.lstPokemon.StringItemList=Ursaring
+1218.lstPokemon.StringItemList=Schneckmag
+1219.lstPokemon.StringItemList=Magcargo
+1220.lstPokemon.StringItemList=Quiekel
+1221.lstPokemon.StringItemList=Keifel
+1222.lstPokemon.StringItemList=Corasonn
+1223.lstPokemon.StringItemList=Remoraid
+1224.lstPokemon.StringItemList=Octillery
+1225.lstPokemon.StringItemList=Botogel
+1226.lstPokemon.StringItemList=Mantax
+1227.lstPokemon.StringItemList=Panzaeron
+1228.lstPokemon.StringItemList=Hunduster
+1229.lstPokemon.StringItemList=Hundemon
+1230.lstPokemon.StringItemList=Seedraking
+1231.lstPokemon.StringItemList=Phanpy
+1232.lstPokemon.StringItemList=Donphan
+1233.lstPokemon.StringItemList=Porygon2
+1234.lstPokemon.StringItemList=Damhirplex
+1235.lstPokemon.StringItemList=Farbeagle
+1236.lstPokemon.StringItemList=Rabauz
+1237.lstPokemon.StringItemList=Kapoera
+1238.lstPokemon.StringItemList=Kussilla
 1239.lstPokemon.StringItemList=Elekid
+1240.lstPokemon.StringItemList=Magby
