Fixed "star dust" to "stardust".

--- a/oxt/PokemonGoIV/DialogStrings_en_US.properties
+++ b/oxt/PokemonGoIV/DialogStrings_en_US.properties
@@ -3,7 +3,7 @@
 2.DlgMain.txtPokemon.Label=~Pok\u00e9mon:
 3.DlgMain.txtCP.Label=~CP:
 4.DlgMain.txtHP.Label=~HP:
-5.DlgMain.txtStarDust.Label=S~tar dust:
+5.DlgMain.txtStardust.Label=S~tardust:
 6.DlgMain.txtPlayerLevel.Label=Player ~level:
 7.DlgMain.cbxIsNew.Label=This Pok\u00e9mon has ~not been powered-up yet.
 8.DlgMain.grpAppraisals.Label=Team Leader Appraisal
