Fixed "StarDust" to "Stardust".

--- a/oxt/PokemonGoIV/DialogStrings_de_DE.properties
+++ b/oxt/PokemonGoIV/DialogStrings_de_DE.properties
@@ -3,7 +3,7 @@
 2.DlgMain.txtPokemon.Label=~Pok\u00e9mon:
 3.DlgMain.txtCP.Label=~WP:
 4.DlgMain.txtHP.Label=~KP:
-5.DlgMain.txtStarDust.Label=~Sternenstaub:
+5.DlgMain.txtStardust.Label=~Sternenstaub:
 6.DlgMain.txtPlayerLevel.Label=Spieler ~Level:
 7.DlgMain.cbxIsNew.Label=Dieses Pok\u00e9mon hat noch ~kein Power-Up bekommen.
 8.DlgMain.grpAppraisals.Label=Bewertung des Teamleiters
