Prepared to merge the Deutsch localization.
Revert "Updated the copyright year."

This reverts commit 4664f6e90e02f6699769d884f636457a34203741.

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 pokemongoiv - The Pokémon GO IV calculator
 
-  Copyright (c) 2016-2017 imacat.
+  Copyright (c) 2016 imacat.
   
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
