* Added Pokémons from Johto region (generation 2), whose ID are from 152 to 251, without images yet. * Moved fnMapPokemonNameToId from 0Main to 9Load, because it is only used in 9Load. * Separated sPokemonId from sPokemonName in the data structure, to fix the confusion for Farfetch'd, Nidoran♀, Nidoran♂, and Mr. Mime. * Advanced to 0.4.0. * Updated the update information.

--- a/oxt/PokemonGoIV/DialogStrings_de_DE.properties
+++ b/oxt/PokemonGoIV/DialogStrings_de_DE.properties
@@ -250,3 +250,14 @@
 1238.lstPokemon.StringItemList=Kussilla
 1239.lstPokemon.StringItemList=Elekid
 1240.lstPokemon.StringItemList=Magby
+1241.lstPokemon.StringItemList=Miltank
+1242.lstPokemon.StringItemList=Heiteira
+1243.lstPokemon.StringItemList=Raikou
+1244.lstPokemon.StringItemList=Entei
+1245.lstPokemon.StringItemList=Suicune
+1246.lstPokemon.StringItemList=Larvitar
+1247.lstPokemon.StringItemList=Pupitar
+1248.lstPokemon.StringItemList=Despotar
+1249.lstPokemon.StringItemList=Lugia
+1250.lstPokemon.StringItemList=Ho-Oh
+1251.lstPokemon.StringItemList=Celebi
