--- a/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
+++ b/oxt/PokemonGoIV/DialogStrings_zh_TW.properties
@@ -161,11 +161,103 @@
 1149.lstPokemon.StringItemList=Dragonite
 1150.lstPokemon.StringItemList=Mewtwo
 1151.lstPokemon.StringItemList=Mew
+1152.lstPokemon.StringItemList=Chikorita
+1153.lstPokemon.StringItemList=Bayleef
+1154.lstPokemon.StringItemList=Meganium
+1155.lstPokemon.StringItemList=Cyndaquil
+1156.lstPokemon.StringItemList=Quilava
+1157.lstPokemon.StringItemList=Typhlosion
+1158.lstPokemon.StringItemList=Totodile
+1159.lstPokemon.StringItemList=Croconaw
+1160.lstPokemon.StringItemList=Feraligatr
+1161.lstPokemon.StringItemList=Sentret
+1162.lstPokemon.StringItemList=Furret
+1163.lstPokemon.StringItemList=Hoothoot
+1164.lstPokemon.StringItemList=Noctowl
+1165.lstPokemon.StringItemList=Ledyba
+1166.lstPokemon.StringItemList=Ledian
+1167.lstPokemon.StringItemList=Spinarak
+1168.lstPokemon.StringItemList=Ariados
+1169.lstPokemon.StringItemList=Crobat
+1170.lstPokemon.StringItemList=Chinchou
+1171.lstPokemon.StringItemList=Lanturn
 1172.lstPokemon.StringItemList=Pichu
 1173.lstPokemon.StringItemList=Cleffa
 1174.lstPokemon.StringItemList=Igglybuff
 1175.lstPokemon.StringItemList=Togepi
 1176.lstPokemon.StringItemList=Togetic
+1177.lstPokemon.StringItemList=Natu
+1178.lstPokemon.StringItemList=Xatu
+1179.lstPokemon.StringItemList=Mareep
+1180.lstPokemon.StringItemList=Flaaffy
+1181.lstPokemon.StringItemList=Ampharos
+1182.lstPokemon.StringItemList=Bellossom
+1183.lstPokemon.StringItemList=Marill
+1184.lstPokemon.StringItemList=Azumarill
+1185.lstPokemon.StringItemList=Sudowoodo
+1186.lstPokemon.StringItemList=Politoed
+1187.lstPokemon.StringItemList=Hoppip
+1188.lstPokemon.StringItemList=Skiploom
+1189.lstPokemon.StringItemList=Jumpluff
+1190.lstPokemon.StringItemList=Aipom
+1191.lstPokemon.StringItemList=Sunkern
+1192.lstPokemon.StringItemList=Sunflora
+1193.lstPokemon.StringItemList=Yanma
+1194.lstPokemon.StringItemList=Wooper
+1195.lstPokemon.StringItemList=Quagsire
+1196.lstPokemon.StringItemList=Espeon
+1197.lstPokemon.StringItemList=Umbreon
+1198.lstPokemon.StringItemList=Murkrow
+1199.lstPokemon.StringItemList=Slowking
+1200.lstPokemon.StringItemList=Misdreavus
+1201.lstPokemon.StringItemList=Unown
+1202.lstPokemon.StringItemList=Wobbuffet
+1203.lstPokemon.StringItemList=Girafarig
+1204.lstPokemon.StringItemList=Pineco
+1205.lstPokemon.StringItemList=Forretress
+1206.lstPokemon.StringItemList=Dunsparce
+1207.lstPokemon.StringItemList=Gligar
+1208.lstPokemon.StringItemList=Steelix
+1209.lstPokemon.StringItemList=Snubbull
+1210.lstPokemon.StringItemList=Granbull
+1211.lstPokemon.StringItemList=Qwilfish
+1212.lstPokemon.StringItemList=Scizor
+1213.lstPokemon.StringItemList=Shuckle
+1214.lstPokemon.StringItemList=Heracross
+1215.lstPokemon.StringItemList=Sneasel
+1216.lstPokemon.StringItemList=Teddiursa
+1217.lstPokemon.StringItemList=Ursaring
+1218.lstPokemon.StringItemList=Slugma
+1219.lstPokemon.StringItemList=Magcargo
+1220.lstPokemon.StringItemList=Swinub
+1221.lstPokemon.StringItemList=Piloswine
+1222.lstPokemon.StringItemList=Corsola
+1223.lstPokemon.StringItemList=Remoraid
+1224.lstPokemon.StringItemList=Octillery
+1225.lstPokemon.StringItemList=Delibird
+1226.lstPokemon.StringItemList=Mantine
+1227.lstPokemon.StringItemList=Skarmory
+1228.lstPokemon.StringItemList=Houndour
+1229.lstPokemon.StringItemList=Houndoom
+1230.lstPokemon.StringItemList=Kingdra
+1231.lstPokemon.StringItemList=Phanpy
+1232.lstPokemon.StringItemList=Donphan
+1233.lstPokemon.StringItemList=Porygon2
+1234.lstPokemon.StringItemList=Stantler
+1235.lstPokemon.StringItemList=Smeargle
+1236.lstPokemon.StringItemList=Tyrogue
+1237.lstPokemon.StringItemList=Hitmontop
 1238.lstPokemon.StringItemList=Smoochum
 1239.lstPokemon.StringItemList=Elekid
 1240.lstPokemon.StringItemList=Magby
+1241.lstPokemon.StringItemList=Miltank
+1242.lstPokemon.StringItemList=Blissey
+1243.lstPokemon.StringItemList=Raikou
+1244.lstPokemon.StringItemList=Entei
+1245.lstPokemon.StringItemList=Suicune
+1246.lstPokemon.StringItemList=Larvitar
+1247.lstPokemon.StringItemList=Pupitar
+1248.lstPokemon.StringItemList=Tyranitar
+1249.lstPokemon.StringItemList=Lugia
+1250.lstPokemon.StringItemList=Ho-Oh
+1251.lstPokemon.StringItemList=Celebi
